--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,7 @@
 {
   "livePreview": false,
   "defaultViewMode": "preview",
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "tabSize": 4,
+  "readableLineLength": false
 }
