--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,7 +1,14 @@
 {
   "livePreview": true,
-  "defaultViewMode": "preview",
+  "defaultViewMode": "source",
   "alwaysUpdateLinks": true,
-  "tabSize": 4,
-  "readableLineLength": false
+  "tabSize": 2,
+  "readableLineLength": false,
+  "foldHeading": true,
+  "showInlineTitle": true,
+  "strictLineBreaks": false,
+  "foldIndent": true,
+  "showIndentGuide": false,
+  "rightToLeft": false,
+  "smartIndentList": false
 }
